# family-tree

./: .dockerignore  .gitignore  .gitmodules  README.md  bower.json  build.js  genhash.sh  index.html  index.js  package.json  tree.toml  tsconfig.json  webpack.config.js
solver/: Cargo.toml
solver/src/: lib.rs
src/: composer.ts  id.ts  input.ts  main.ts  node.ts  types.ts
src/data/: id.ts  index.ts  input.ts  types.ts
src/display/: composer.ts  crawler.ts  elements.ts  index.ts  node.ts
src/display/composer/: animator.ts  composer.ts  index.ts  viewport.ts
src/display/elements/: base.ts  index.ts  links.ts  node.ts
src/frontend/scss/: buttons.scss
src/frontend/typescript/: main.ts
src/frontend/typescript/display/elements/: node.ts
src/frontend/typescript/layouts/: base.ts  spring.ts
src/layouts/: base.ts  index.ts  spring.ts  wasm.ts
style/: buttons.scss  defs.scss  main.scss
